--- a/firstpage.html
+++ b/firstpage.html
@@ -15,12 +15,17 @@
     </div>
 
     <div class="main2">
-        <h1>Merghc</h1>
+        <h1>Om Wildhogs</h1>
+        <p>Wildhogs är coola <br>feofokfoeowjfpewjfjwejfi <br>e fjewjfjwfjwofjoewjfoiwejfoijewfoij <br>jefwjfjwfjw</p>
     </div>
 
 </section>
 
 
+<footer>
+
+<p>&copy; Wildhogs 2025</p>
+</footer>
 
 
 </body>
