--- a/firstpage.html
+++ b/firstpage.html
@@ -16,10 +16,15 @@
 
     <div class="main2">
         <h1>Om Wildhogs</h1>
-        <p>Wildhogs är coola <br>feofokfoeowjfpewjfjwejfi <br>e fjewjfjwfjwofjoewjfoiwejfoijewfoij <br>jefwjfjwfjw</p>
+        <p>Wildhogs är en gemenskap av bikers och kockar med en passion för motorcyklar, natur och vildsvinsbaserad matlagning. <br> Vi kombinerar friheten på vägarna med smaken av rustik mat, skapad över öppen eld. <br> Hos oss handlar det om äventyr, gemenskap och kärleken till det genuina. Häng med på resan – vi är Wildhogs!</p>
     </div>
 
 </section>
+
+<div class="knappar">
+    <a href="Om.html">Om</a> 
+    <a href="proj1.html">Hem</a>
+</div>
 
 
 <footer>
