--- a/firstpage.html
+++ b/firstpage.html
@@ -8,30 +8,28 @@
 </head>
 <body>
     
-<section class="ingångssida">
-
-    <div class="main">
-       
+<section class="ingångssida">   
+    <div class="header1">
+        <h1>Wildhogs</h1> 
     </div>
 
-    <div class="main2">
-        <h1>Om Wildhogs</h1>
-        <p>Wildhogs är en gemenskap av bikers och kockar med en passion för motorcyklar, natur och vildsvinsbaserad matlagning. <br> Vi kombinerar friheten på vägarna med smaken av rustik mat, skapad över öppen eld. <br> Hos oss handlar det om äventyr, gemenskap och kärleken till det genuina. Häng med på resan – vi är Wildhogs!</p>
+    <div class="storbild">
+        <img src="wildhogs.png" alt="">
+        <div class="bildtextf">-Kockar på dagen, riders på natten</div>
     </div>
-
 </section>
 
-<div class="knappar">
-    <a href="Om.html">Om</a> 
-    <a href="proj1.html">Hem</a>
+<!-- Om oss sektion -->
+<section class="om-oss">
+    <div>
+        <h2>Om oss</h2>
+        <p>Vi är Wildhogs, ett gäng passionerade kockar och riders!</p>
+    </div>
+</section>
+
+<div class="footer">
+    <p>©Wildhogs 2025</p>
 </div>
-
-
-<footer>
-
-<p>&copy; Wildhogs 2025</p>
-</footer>
-
 
 </body>
 </html>
