--- a/firstpage.html
+++ b/firstpage.html
@@ -7,25 +7,27 @@
     <link rel="stylesheet" href="cssmain.css">
 </head>
 <body>
-    
-<section class="ingångssida">   
     <div class="header1">
         <h1>Wildhogs</h1> 
-    </div>
-
+    </div>  
+    
+<div class="mitten">
+<section class="ingångssida">   
     <div class="storbild">
         <img src="wildhogs.png" alt="">
         <div class="bildtextf">-Kockar på dagen, riders på natten</div>
     </div>
 </section>
 
-<!-- Om oss sektion -->
+
 <section class="om-oss">
     <div>
         <h2>Om oss</h2>
         <p>Vi är Wildhogs, ett gäng passionerade kockar och riders!</p>
     </div>
 </section>
+
+</div>
 
 <div class="footer">
     <p>©Wildhogs 2025</p>
