--- a/firstpage.html
+++ b/firstpage.html
@@ -32,6 +32,9 @@
 
 <div class="footer">
     <p>©Wildhogs 2025</p>
+    <p>Nummer:+46 70-136 43 41</p>
+    <p>Mail:Wildhogs@gmail.com</p>
+    <p>Adress:wildranch 73</p>
 </div>
 
 </body>
