--- a/firstpage.html
+++ b/firstpage.html
@@ -30,7 +30,7 @@
 
 <section class="om-oss">
     <div>
-        <h2>Om oss</h2>
+        <h2>Om oss:</h2>
         <p>Vi är Wildhogs, ett gäng passionerade kockar och riders!</p>
     </div>
 </section>
@@ -39,8 +39,8 @@
 
 <div class="footer">
     <p>©Wildhogs 2025</p>
-    <p>Nummer:+46 70-136 43 41</p>
-    <p>Email:Wildhogs@gmail.com</p>
+    <p>MobilNummer:+46 70-136 43 41</p>
+    <p>E-post:Wildhogs@gmail.com</p>
     <p>Adress:wildranch 73</p>
 </div>
 
