--- a/merch.html
+++ b/merch.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wildhogs</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="navbar">
@@ -43,5 +43,12 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+      <p>©Wildhogs 2025</p>
+      <p>MobilNummer:+46 70-136 43 41</p>
+      <p>E-post:Wildhogs@gmail.com</p>
+      <p>Adress:wildranch 73</p>
+  </div>
+  
 </body>
 </html>
