--- a/merch.html
+++ b/merch.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="navbar">
+      <h1>Wildhogs</h1>
         <a href="#">Hem</a>
         <a href="#">Kontakt</a>
     </div>
