--- a/merch.html
+++ b/merch.html
@@ -9,8 +9,12 @@
 <body>
     <div class="navbar">
       <h1>Wildhogs</h1>
-        <a href="#">Hem</a>
-        <a href="#">Kontakt</a>
+      
+    </div>
+
+    <div class="knappar">
+        <a href="firstpage.html">Hem</a>
+
     </div>
 
     <div class="container">
