--- a/merch.html
+++ b/merch.html
@@ -47,7 +47,7 @@
                 <button class="order-button">Order Now</button>
             </div>
         </div>
-        <div class="container">
+        
           <div class="product-box">
               <img src="DALL·E 2025-03-14 09.59.55 - A rugged, black apron featuring the Wildhogs logo—a fierce wild boar head with crossed chef knives and a motorcycle wheel in the background. The apron.webp" alt="T-Shirt">
               <div class="tooltip">lätt Förkläde med Wildhogs logga!</div>
@@ -57,16 +57,27 @@
                   <button class="order-button">Order Now</button>
               </div>
           </div>
-          <div class="container">
-            <div class="product-box">
-                <img src="" alt="T-Shirt">
-                <div class="tooltip">starkt Förkläde med Wildhogs logga!</div>
-                <div class="text-container">
-                    <h2>Förkläde</h2>
-                    <p>599kr</p>
-                    <button class="order-button">Order Now</button>
-                </div>
+
+          <div class="product-box">
+            <img src="superkläde.png" alt="T-Shirt">
+            <div class="tooltip">Redigt Förkläde med Wildhogs logga!</div>
+            <div class="text-container">
+                <h2>Förkläde</h2>
+                <p>599kr</p>
+                <button class="order-button">Order Now</button>
             </div>
+        </div>
+
+        <div class="product-box">
+          <img src="stekspade.png" alt="T-Shirt">
+          <div class="tooltip">Redig stekpade för allt grillat!</div>
+          <div class="text-container">
+              <h2>Stekspade</h2>
+              <p>279kr</p>
+              <button class="order-button">Order Now</button>
+          </div>
+      </div>
+          
     </div>
     <div class="footer">
       <p>©Wildhogs 2025</p>
