--- a/merch.html
+++ b/merch.html
@@ -14,6 +14,7 @@
 
     <div class="knappar">
         <a href="firstpage.html">Hem</a>
+        <a href="kontakta.html">Kontakta</a>
 
     </div>
 
