--- a/merch.html
+++ b/merch.html
@@ -70,6 +70,16 @@
         </div>
 
         <div class="product-box">
+          <img src="sås.png" alt="T-Shirt">
+          <div class="tooltip">Rökig och stark BBQ sås! 500ml</div>
+          <div class="text-container">
+              <h2>Wildhogs special sås</h2>
+              <p>79kr</p>
+              <button class="order-button">Order Now</button>
+          </div>
+      </div>
+
+        <div class="product-box">
           <img src="stekspade.png" alt="T-Shirt">
           <div class="tooltip">Redig stekpade för allt grillat!</div>
           <div class="text-container">
