--- a/firstpage.html
+++ b/firstpage.html
@@ -42,7 +42,7 @@
     <p>©Wildhogs 2025</p>
     <p>MobilNummer:+46 70-136 43 41</p>
     <p>E-post:Wildhogs@gmail.com</p>
-    <p>Adress:wildranch 73</p>
+    <p>Adress:Wildranch 73</p>
 </div>
 
 </body>
