--- a/merch.html
+++ b/merch.html
@@ -89,12 +89,32 @@
           </div>
       </div>
           
+      <div class="product-box">
+        <img src="grill.webp" alt="T-Shirt">
+        <div class="tooltip">Kolgrill för allt grillat!</div>
+        <div class="text-container">
+            <h2>Grill</h2>
+            <p>5499kr</p>
+            <button class="order-button">Order Now</button>
+        </div>
+    </div>
+
+    <div class="product-box">
+      <img src="Smoker.webp" alt="T-Shirt">
+      <div class="tooltip">Rök för Matlagning!</div>
+      <div class="text-container">
+          <h2>Rök</h2>
+          <p>20 000kr</p>
+          <button class="order-button">Order Now</button>
+      </div>
+  </div>
+
     </div>
     <div class="footer">
       <p>©Wildhogs 2025</p>
       <p>MobilNummer:+46 70-136 43 41</p>
       <p>E-post:Wildhogs@gmail.com</p>
-      <p>Adress:wildranch 73</p>
+      <p>Adress:Wildranch 73</p>
   </div>
   
 </body>
