--- a/merch.html
+++ b/merch.html
@@ -112,7 +112,7 @@
     </div>
     <div class="footer">
       <p>©Wildhogs 2025</p>
-      <p>MobilNummer:+46 70-136 43 41</p>
+      <p>Mobilnummer:+46 70-136 43 41</p>
       <p>E-post:Wildhogs@gmail.com</p>
       <p>Adress:Wildranch 73</p>
   </div>
